--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -53,7 +53,7 @@ const content: NotFoundContent = lang === 'ar' ? arabicContent : defaultContent;
             text={content.buttons.home} 
           />
           <Button 
-            href={`/${lang}/contact`} 
+            href={`/${lang}/get-in-touch`} 
             variant="secondary" 
             text={content.buttons.contact} 
           />
