--- a/src/pages/[lang]/blog/[slug].astro
+++ b/src/pages/[lang]/blog/[slug].astro
@@ -176,7 +176,7 @@ const imageUrl = post.data.image
           Get your professional website built by our expert team. Let's turn your vision into reality.
         </p>
         <Button
-          href={`/${lang}/contact`}
+          href={`/${lang}/get-in-touch`}
           variant="primary"
           text={footerT.contact.title}
           class="text-base px-6 py-2"
