--- a/src/pages/[lang]/services.astro
+++ b/src/pages/[lang]/services.astro
@@ -125,7 +125,7 @@ const pricing = translations?.pricing ?? defaultPricing;
             {heroT.services.description}
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <Button href={`/${lang}/contact`} variant="primary" text={heroT.services.startProject} />
+            <Button href={`/${lang}/get-in-touch`} variant="primary" text={heroT.services.startProject} />
             <Button href={`/${lang}/works`} variant="secondary" text={heroT.services.viewWork} />
           </div>
         </div>
