--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -3,6 +3,9 @@ import Layout from '../layouts/Layout.astro';
 import ServiceCard from '../components/ServiceCard.astro';
 import CtaOne from '../components/Ctaone.astro';
 import Button from '../components/Button.astro';
+import { getLanguageFromURL } from '../i18n/utils';
+
+const lang = getLanguageFromURL(Astro.url.pathname);
 
 const services = [
   {
@@ -67,9 +70,9 @@ const services = [
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
 
-              <Button href="/contact" variant="primary" text="Start a Project" />
+              <Button href={`/${lang}/get-in-touch`} variant="primary" text="Start a Project" />
 
-              <Button href="/works" variant="secondary" text="View Our Work" />
+              <Button href={`/${lang}/works`} variant="secondary" text="View Our Work" />
             </div>
           </div>
 
